force-app/main/default/objects/sugati__Questionnaire_Question_Category__c/sugati__Questionnaire_Question_Category__c.object-meta.xml
<CustomObject>
    <description>A list of categories for each question.</description>
    <label>Questionnaire Question Category</label>
    <nameField>
        <label>Questionnaire Question Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questionnaire Question Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>