force-app/main/default/objects/sugati__Questionnaire_Question_Category__c/fields/sugati__QQC_Introduction_Text__c.field-meta.xml
<CustomField>
    <fullName>sugati__QQC_Introduction_Text__c</fullName>
    <label>Introduction Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>