force-app/main/default/objects/sugati__Questionnaire_Question_Category__c/fields/sugati__QQC_Live__c.field-meta.xml
<CustomField>
    <fullName>sugati__QQC_Live__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Live</label>
    <type>Checkbox</type>
</CustomField>