force-app/main/default/objects/sugati__Questionnaire_Question_Category__c/fields/sugati__Record_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Record_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Record Type</label>
    <referenceTo>sugati__Record_Type__c</referenceTo>
    <relationshipLabel>Questionnaire Question Categories</relationshipLabel>
    <relationshipName>Questionnaire_Question_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>